<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.feature.register.RegisterPhonectivity">

    <LinearLayout
        android:id="@+id/layout_title_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Theme.GolingAndroid.AppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/welcome_register_page_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/illust_registration"
            android:contentDescription="@string/illustration_registration_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Theme.GolingAndroid.AppSubtitle"
            android:text="@string/copywriting_register_page" />


    </LinearLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_input_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:hint="@string/phone_input_field"
        app:errorEnabled="true"
        app:errorTextColor="@color/redColor"
        app:boxStrokeErrorColor="@color/redColor"
        android:layout_marginTop="24dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_title_app">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/layout_ui_register_button_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       layout="@layout/ui_button_register_goling"
        app:layout_constraintTop_toBottomOf="@id/phone_input_layout_login"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>