<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/order_Service_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/pickup_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_menu_order"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:padding="8dp">

            <ImageView
                android:id="@+id/icon_pickup_menu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/pickup_menu_txt"
                android:src="@drawable/ic_pickup" />

            <TextView
                style="@style/Theme.GolingAndroid.AppMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkBlue"
                android:layout_marginHorizontal="16dp"
                android:text="Regular" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/dropOff_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_menu_order"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:padding="8dp">

            <ImageView
                android:id="@+id/icon_dropoff_menu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/drop_off_menu"
                android:src="@drawable/ic_drop_off" />

            <TextView
                style="@style/Theme.GolingAndroid.AppMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/darkBlue"
                android:text="Express" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/order_Service_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Theme.GolingAndroid.AppMenu"
            android:textColor="@color/darkBlue"
            android:text="@string/other_features"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/other_features_menu_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:strokeColor="@android:color/transparent"
            app:cardElevation="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/goLing_cash_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/goling_cash_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/bpdcash_menu"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_wallet"/>
                    <TextView
                        android:id="@+id/goling_cash_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginTop="12dp"
                        android:layout_below="@id/goling_cash_icon"
                        style="@style/Theme.GolingAndroid.AppMenu"
                        android:text="@string/bpdcash_menu"/>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/check_postage_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/check_postage_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/check_postage_menu"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_check_ongkir"/>
                    <TextView
                        android:id="@+id/check_postage_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginTop="12dp"
                        android:layout_below="@id/check_postage_icon"
                        style="@style/Theme.GolingAndroid.AppMenu"
                        android:text="@string/check_postage_menu"/>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/customer_service_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/customer_service_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/goling_cs_menu"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_customer_service"/>
                    <TextView
                        android:id="@+id/customer_service_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        android:layout_marginTop="12dp"
                        android:layout_below="@id/customer_service_icon"
                        style="@style/Theme.GolingAndroid.AppMenu"
                        android:text="@string/goling_cs_menu"/>

                </RelativeLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>