<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/search_bar_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.search.SearchBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lacak_nomor_resi_search"
            app:backgroundTint="@android:color/transparent" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:contentDescription="Scan Icon"
            android:src="@drawable/icon_scan"
            app:tint="@color/grayColor" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/card_wallet"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_wallet_svg"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_profile">

        <TextView
            android:id="@+id/text_title_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo_gocash_title"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/layout_amount_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title_card"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/amount_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/currency_amount_ewallet"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/amount_nominal_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sample_amount"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/visible_amount_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:padding="0dp"
                android:src="@drawable/ic_visibility"
                app:iconSize="24dp"
                app:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_top_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/layout_amount_wallet"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/top_up_wallet_button"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/bluePrimary"
                app:icon="@drawable/ic_add_amount"
                app:iconSize="24dp"
                app:iconTint="@color/bluePrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:text="Top up"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>